Upgrade to JUnit 5.3 RC1 and Maven Compiler 3.8.0
Closes #7
Closes #10