@@ -11,7 +11,6 @@
     </parent>
 
     <artifactId>sawdust.alpha</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
     <build>
         <directory>target/maven</directory>
@@ -19,21 +18,33 @@
         <testSourceDirectory>src/test/java/sawdust.alpha</testSourceDirectory>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <executions>
+                    <execution>
+                        <id>launch-console</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <testExcludes>
-                        <testExclude>module-info.java</testExclude>
-                    </testExcludes>
+                    <classpathScope>test</classpathScope>
+                    <longModulepath>false</longModulepath>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>--module-path</argument>
+                        <modulepath/>
+                        <argument>--add-modules</argument>
+                        <argument>ALL-MODULE-PATH</argument>
+                        <argument>--module</argument>
+                        <argument>org.junit.platform.console</argument>
+                        <argument>--scan-modules</argument>
+                    </arguments>
                 </configuration>
             </plugin>
-            <!--<plugin>-->
-                <!--<artifactId>maven-surefire-plugin</artifactId>-->
-                <!--<version>2.22.0</version>-->
-                <!--<configuration>-->
-                    <!--<argLine>-Djunit.jupiter.execution.parallel.enabled=true</argLine>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
         </plugins>
     </build>
 
