@@ -18,29 +18,38 @@
             <artifactId>sawdust.alpha</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${jupiter.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${jupiter.version}</version>
-            <scope>runtime</scope>
-        </dependency>
     </dependencies>
 
     <build>
         <directory>target/maven</directory>
-        <sourceDirectory>src/test/java/user.view</sourceDirectory>
-
+        <testSourceDirectory>src/test/java/user.view</testSourceDirectory>
         <plugins>
             <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <executions>
+                    <execution>
+                        <id>launch-console</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <argLine>-Dmodular.tests=true -Djunit.jupiter.execution.parallel.enabled=true</argLine>
+                    <classpathScope>test</classpathScope>
+                    <longModulepath>false</longModulepath>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>--module-path</argument>
+                        <modulepath/>
+                        <argument>--add-modules</argument>
+                        <argument>ALL-MODULE-PATH</argument>
+                        <argument>--module</argument>
+                        <argument>org.junit.platform.console</argument>
+                        <argument>--scan-modules</argument>
+                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
